--- a/WebApp/Views/Person/Index.cshtml
+++ b/WebApp/Views/Person/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebApp.Models.Person>
+﻿@model Canducci.MongoDB.Repository.Paged.IPagedList<WebApp.Models.Person>
 
 @{
     ViewData["Title"] = "Index";
@@ -12,30 +12,42 @@
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Id)
+            <th class="text-center">
+                Id
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
+            <th class="text-center">
+                Name
             </th>
-            <th></th>
+            <th class="text-center">...</th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            <td>
+            <td style="width:23%;text-align:center">
                 @Html.DisplayFor(modelItem => item.Id)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
-            <td>
+            <td  style="width:20%;text-align:center">
                 @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
                 @Html.ActionLink("Details", "Details", new { id=item.Id }) |
                 @Html.ActionLink("Delete", "Delete", new { id=item.Id })
             </td>
-        </tr>
-}
+        </tr>}
     </tbody>
 </table>
+<div class="row">
+  <div class="col-md-5 text-right">
+    @if (Model.HasPreviousPage) {
+      <a href="/Person?page=@(Model.PageNumber - 1)">voltar</a>
+    }
+  </div>
+  <div class="col-md-5 text-left">
+    @if (Model.HasNextPage)
+    {
+      <a href="/Person?page=@(Model.PageNumber + 1)">avançar</a>
+    }
+  </div>
+</div>
