--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                     <li class="nav-item">
                       <a class="nav-link text-dark" asp-area="" asp-controller="Person" asp-action="Index">Person</a>
                     </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-dark" asp-area="" asp-controller="Car" asp-action="Index">Car</a>
+                    </li>
                   </ul>
                 </div>
             </div>
