--- a/WebApp/Views/Person/Index.cshtml
+++ b/WebApp/Views/Person/Index.cshtml
@@ -1,46 +1,49 @@
 ﻿@model Canducci.MongoDB.Repository.Paged.IPagedList<WebApp.Models.Person>
 
 @{
-    ViewData["Title"] = "Index";
+  ViewData["Title"] = "Index";
 }
 
 <h1>Count Register Person @ViewBag.Count</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+  <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
-    <thead>
-        <tr>
-            <th class="text-center">
-                Id
-            </th>
-            <th class="text-center">
-                Name
-            </th>
-            <th class="text-center">...</th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td style="width:23%;text-align:center">
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td  style="width:20%;text-align:center">
-                @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-            </td>
-        </tr>}
-    </tbody>
+  <thead>
+    <tr>
+      <th class="text-center">
+        Id
+      </th>
+      <th class="text-center">
+        Name
+      </th>
+      <th class="text-center">...</th>
+    </tr>
+  </thead>
+  <tbody>
+    @foreach (var item in Model)
+    {
+      <tr>
+        <td style="width:23%;text-align:center">
+          @Html.DisplayFor(modelItem => item.Id)
+        </td>
+        <td>
+          @Html.DisplayFor(modelItem => item.Name)
+        </td>
+        <td style="width:20%;text-align:center">
+          @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+          @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+          @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+        </td>
+      </tr>
+}
+  </tbody>
 </table>
 <div class="row">
   <div class="col-md-5 text-right">
-    @if (Model.HasPreviousPage) {
+    @if (Model.HasPreviousPage)
+    {
       <a href="/Person?page=@(Model.PageNumber - 1)">voltar</a>
     }
   </div>
